--- a/ClassLibrary3/ClassLibrary3.csproj
+++ b/ClassLibrary3/ClassLibrary3.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A59597EA-E7E5-47DE-A410-F31E7B5E35CB}</ProjectGuid>
+    <ProjectGuid>{83390849-DFBA-4DDD-87F0-97820BE07326}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary2</RootNamespace>
-    <AssemblyName>philips.pmsmr.platform.scannercontext.wrapper_mcp</AssemblyName>
+    <RootNamespace>ClassLibrary3</RootNamespace>
+    <AssemblyName>philips.pmsmr.platform.aswglo_mcp</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PatientPosition.cs" />
+    <Compile Include="MainSysType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
