--- a/ClassLibrary5/ClassLibrary5.csproj
+++ b/ClassLibrary5/ClassLibrary5.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A59597EA-E7E5-47DE-A410-F31E7B5E35CB}</ProjectGuid>
+    <ProjectGuid>{C27747C1-8B6D-4131-8DF8-2C4C75137B49}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary2</RootNamespace>
-    <AssemblyName>philips.pmsmr.platform.scannercontext.wrapper_mcp</AssemblyName>
+    <RootNamespace>ClassLibrary5</RootNamespace>
+    <AssemblyName>philips.pmsmr.platform.ecplatform_cs</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PatientPosition.cs" />
+    <Compile Include="HtmlItemDescription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
