--- a/ClassLibrary10/ClassLibrary10.csproj
+++ b/ClassLibrary10/ClassLibrary10.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EC597197-C453-40C4-8396-484D44D5330C}</ProjectGuid>
+    <ProjectGuid>{D7D31EB8-7067-49B0-97C6-4D1BB41AD945}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary2</RootNamespace>
-    <AssemblyName>philips.pmsmr.examcards.ecmodel_cs</AssemblyName>
+    <RootNamespace>ClassLibrary10</RootNamespace>
+    <AssemblyName>philips.pmsmr.platform.aswglo_cli</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,30 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExamCard.cs" />
+    <Compile Include="MainSysType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary10\ClassLibrary10.csproj">
-      <Project>{d7d31eb8-7067-49b0-97c6-4d1bb41ad945}</Project>
-      <Name>ClassLibrary10</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary2\ClassLibrary2.csproj">
-      <Project>{A59597EA-E7E5-47DE-A410-F31E7B5E35CB}</Project>
-      <Name>ClassLibrary2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary3\ClassLibrary3.csproj">
-      <Project>{83390849-DFBA-4DDD-87F0-97820BE07326}</Project>
-      <Name>ClassLibrary3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary4\ClassLibrary4.csproj">
-      <Project>{98ce0faa-da83-46ab-b992-66304c0d5f2a}</Project>
-      <Name>ClassLibrary4</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary5\ClassLibrary5.csproj">
-      <Project>{C27747C1-8B6D-4131-8DF8-2C4C75137B49}</Project>
-      <Name>ClassLibrary5</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
