--- a/ClassLibrary7/ClassLibrary7.csproj
+++ b/ClassLibrary7/ClassLibrary7.csproj
@@ -44,5 +44,11 @@
     <Compile Include="SingleScan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary3\ClassLibrary3.csproj">
+      <Project>{83390849-DFBA-4DDD-87F0-97820BE07326}</Project>
+      <Name>ClassLibrary3</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
