--- a/ClassLibrary8/ClassLibrary8.csproj
+++ b/ClassLibrary8/ClassLibrary8.csproj
@@ -49,6 +49,10 @@
       <Project>{83390849-DFBA-4DDD-87F0-97820BE07326}</Project>
       <Name>ClassLibrary3</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClassLibrary9\ClassLibrary9.csproj">
+      <Project>{bf1045ca-41f3-4d41-ae97-6e5a7178caea}</Project>
+      <Name>ClassLibrary9</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
