--- a/ClassLibrary7/ClassLibrary7.csproj
+++ b/ClassLibrary7/ClassLibrary7.csproj
@@ -58,5 +58,8 @@
       <Name>ClassLibrary8</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
