--- a/data/SR_ADULT_007/CMakeLists.txt
+++ b/data/SR_ADULT_007/CMakeLists.txt
@@ -3,3 +3,7 @@ project(ExamCard C)
 
 add_executable(dump dump.c)
 set_property(TARGET dump PROPERTY C_STANDARD 11)
+
+find_package(LibXml2 2.9 MODULE REQUIRED)
+add_executable(xpath1 xpath1.c)
+target_link_libraries(xpath1 PRIVATE LibXml2::LibXml2)
