--- a/data/SR_ADULT_007/CMakeLists.txt
+++ b/data/SR_ADULT_007/CMakeLists.txt
@@ -4,6 +4,9 @@ project(ExamCard C)
 add_executable(dump dump.c)
 set_property(TARGET dump PROPERTY C_STANDARD 11)
 
+add_executable(get get.c)
+set_property(TARGET get PROPERTY C_STANDARD 11)
+
 add_executable(dump2 dump2.c)
 set_property(TARGET dump2 PROPERTY C_STANDARD 11)
 
