seems to pass all

--- a/data/SR_ADULT_007/CMakeLists.txt
+++ b/data/SR_ADULT_007/CMakeLists.txt
@@ -10,7 +10,7 @@ set_property(TARGET get PROPERTY C_STANDARD 11)
 add_executable(dump2 dump2.c)
 set_property(TARGET dump2 PROPERTY C_STANDARD 11)
 
-add_executable(dump3 dump3.c)
+add_executable(dump3 dump3.c examcard.c)
 set_property(TARGET dump3 PROPERTY C_STANDARD 11)
 
 add_executable(test test.c)
@@ -20,5 +20,5 @@ find_package(LibXml2 2.9 MODULE REQUIRED)
 add_executable(xpath1 xpath1.c)
 target_link_libraries(xpath1 PRIVATE LibXml2::LibXml2)
 
-add_executable(examcard2xml examcard2xml.c)
+add_executable(examcard2xml examcard2xml.c examcard.c)
 target_link_libraries(examcard2xml PRIVATE LibXml2::LibXml2)
